# fast_presburger

./: CMakeLists.txt  README.md
include/: ArrayRef.h  Compiler.h  Fraction.h  IntegerRelation.h  LinearTransform.h  MPInt.h  Math.h  Matrix.h  PWMAFunction.h  PresburgerRelation.h  PresburgerSpace.h  Simplex.h  SlowMPInt.h  Utils.h
src/: IntegerRelation.cpp  LinearTransform.cpp  MPInt.cpp  Matrix.cpp  PWMAFunction.cpp  PresburgerRelation.cpp  PresburgerSpace.cpp  Simplex.cpp  SlowMPInt.cpp  Utils.cpp
test/: CMakeLists.txt  main.cpp
